2006-11-17  Bernd Eidenschink  <eide@users.sf.net>

	* nsd/mimetypes.c: Added recommended MIME types for OpenDocument documents.

2006-11-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tcltime.c: Remove excessive check for shared object when
	converting internal rep of time type.

2006-11-14  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/sendmail.tcl: Fixed the bug or weird behaviour when sending big 
	attachments, because socket is nonblocking sending big chunk in one puts
	does not work, so need to do split and send line by line

2006-11-14  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/man3/Ns_Sls.man: Document the C API for SLS data. Tcl
	doctools is hurting...

2006-11-12  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile:
	* include/Makefile.module.in: Don't clobber editor backup files.

	* configure.in:
	* nsd/sls.c:
	* nsd/tcltime.c:
	* nsd/unix.c: Quiten some compiler alias warnings, including some
	ugly casts in tcltime.c.

	* configure.in:
	* nsd/info.c:
	* nsthread/nsthreadtest.c: Check for presence of Tcl_GetMemoryInfo
	in Tcl library. This isn't exported when Tcl is built with the
	custom memory allocator dissabled.

	* include/ns.h:
	* nsd/nsd.h
	* nsd/sls.c:
	* nsd/tclcmds.c:
	* nsd/driver.c:
	* nsd/init.c:
	* nsd/Makefile:
	* doc/src/mann/ns_sls.man:
	* tests/ns_sls.test: Add Ns_Sls* and ns_sls commands supporting
	socket-local-storage (data which persists for the lifetime of an
	open TCP connection). Fixes Bug #1522162.

2006-11-09  Bernd Eidenschink  <eide@users.sf.net>

	* nsd-config.tcl: Added config parameter smtpauthmode
	* tcl/sendmail.tcl: smtpauthmode param now case-insensitive

2006-11-09  Bernd Eidenschink  <eide@users.sf.net>

	* tcl/sendmail.tcl: Added AUTH LOGIN support (which is very similar
	to AUTH PLAIN) to ns_sendmail command
	* doc/src/ns_sendmail.man: Updated documentation for ns_sendmail

2006-10-30  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Fixed bug with not handling partial